// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScheduleModalContent renders 1`] = `
Array [
  <div
    className="schedule-finder__modal-header"
  >
    <div>
      <div
        className="h3 u-small-caps"
        style={
          Object {
            "margin": 0,
          }
        }
      >
         
        Inbound
      </div>
      <h2
        className="h2"
        style={
          Object {
            "margin": 0,
          }
        }
      >
        Oak Grove
      </h2>
    </div>
  </div>,
  <div>
    from 
    <a
      href="/stops/place-mlmnl"
    >
      Malden Center
    </a>
  </div>,
]
`;

exports[`ScheduleModalContent renders with a unique destination name for the Green route 1`] = `
Array [
  <div
    className="schedule-finder__modal-header"
  >
    <div>
      <div
        className="h3 u-small-caps"
        style={
          Object {
            "margin": 0,
          }
        }
      >
         
        East
      </div>
      <h2
        className="h2"
        style={
          Object {
            "margin": 0,
          }
        }
      >
        All branches
      </h2>
    </div>
  </div>,
  <div>
    from 
    <a
      href="/stops/place-mlmnl"
    >
      Malden Center
    </a>
  </div>,
]
`;
